Update birthday message in index.html

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 <body class="text-center">
 <h1>Birthday Cake 🎂</h1>
 <br>
-<button id="start">START (required on Chrome)</button>
+<button id="start"> click! </button>
 <button style="display: none" id="startconsoledebug">enable console logs</button>
 <button style="display: none" id="stopconsoledebug">disable console logs</button>
 <br>
@@ -264,8 +264,8 @@
 		</div>
 	</div>
 	<div class="text-center">
-		<h5 class="cake-off">❣ Happy Birthday Dude ❣ </h5>
-		<p class="cake-off">❤ Wish you best ❤ </p>
+		<h5 class="cake-off">❣ Happy Birthday Babyyyyy ❣ </h5>
+		<p class="cake-off">❤ Make a wish ❤ </p>
 	</div>
 
 </div>
