--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 <body class="text-center">
 <h1>Birthday Cake 🎂</h1>
 <br>
-<button id="start"> click! </button>
+<button id="click"> click! </button>
 <button style="display: none" id="startconsoledebug">enable console logs</button>
 <button style="display: none" id="stopconsoledebug">disable console logs</button>
 <br>
